# PartSeg

./: .coderabbit.yaml  .coveragerc  .deepsource.toml  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .mdlrc  .pre-commit-config.yaml  .readthedocs.yml  .requires.yml  .sourcery.yaml  .travis.yml  .typos.toml  .zenodo.json  CITATION.cff  License.txt  MANIFEST.in  PartSeg-linux.spec  PartSeg-non-pack.spec  PartSeg.spec  Readme.md  advanced_window.py  autofit.py  azure-pipelines.yml  backend.py  batch.py  batch_backed.py  batch_backend.py  batch_testing.py  batch_window.py  calculation_plan.py  changelog.md  clean_segment.tiff  cliff.toml  codecov.yml  convert_to_cmap.py  czifile.py  dev_requirements.txt  extract_images.py  (+55 more)
.azure-pipelines/: linux_libs.yaml  pip_cache.yaml  pyinstaller.yaml  tests.yaml  wheels.yaml
.dependabot/: config.yaml
.github/: TEST_FAIL_TEMPLATE.md  auto-merge.yml  dependabot.yml  project_dict.pws
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/: run-test.yml
.github/workflows/: base_test_workflow.yml  check_pr_title.yml  codeql-analysis.yml  debug_napari.yml  make_release.yml  plugin_preview.yml  qodana_code_quality.yml  reusable_coverage_upload.yml  semgrep.yml  test_napari_repo.yml  test_napari_widgets.yml  test_prereleases.yml  test_workflow.yml  tests.yml  upgrade-dependencies.yml  upload_coverage.yml
.napari/: DESCRIPTION.md  config.yml
.travis/: create_minimal_req.py  install.sh  install2.sh  minimal-req.txt  windows_travis.yml
bug_fixes/fix0_9_4/: __init__.py
build_utils/: Dockerfile  build_partseg.sh  check_updated_packages.py  collect_changed_packages.py  create_and_pack_executable.py  create_build.py  create_environment_yml.sh  create_minimal_constrains_file.py  create_minimal_req.py  cut_changelog.py  download_data.sh  fix_environment.py  mdl_style.rb  minimal-req.in  minimal-req.txt  minreq.py  pyproject_toml_to_yaml.py  python_install.sh  setup_cfg_to_yaml.sh
docs/: PartSegImage.rst  conf.py  custom_application.rst  error_reporting.rst  index.rst  interface  plugins_creation.rst  requirements.txt  state_store.rst  survey_mechanism.rst
docs/PartSegCore/: base.rst  class_register.rst  color_image.rst  distance_in_structure.rst  index.rst  segmentation.rst  sprawl_utils.rst
docs/common_backend/: index.rst
docs/common_gui/: advanced_tabs.rst  algorithms_description.rst  channel_control.rst  collapse_checkbox.rst  colormap_creator.rst  error_report.rst  index.rst  numpy_qimage.rst  universal_gui_part.rst
docs/interface-overview/: interface-overview.rst
docs/utils/: index.rst
examples/: call_simple_threshold.py  convert_tiff_mask_to_projets.py  cut_images_on_part.py  dilate_segmentation_mask.py  extract_components_from_project.py  max_projection.py  test.tif
examples/dev/: check_export.py  cut_images_on_part.py  update_frame_thick.py
help/: PartSeg.qhc  PartSeg.qhcp  advanced.html  doc.qch  doc.qhp  export.html  index.html  view.html
hooks/linux/: hook-numpy.py
hooks/mac/: hook-numpy.py
hooks/windows/: hook-numpy.py
notebooks/: Neuron_types_example.ipynb
package/: MANIFEST.in  setup.py
package/PartSeg/: __init__.py  __main__.py  batch_testing.py  convert_to_cmap.py  example_file.py  extract_images.py  launcher_main.py  napari.yaml  partseg2_main.py  setup.py  state_store.py  test_script.py  test_widget_main.py
package/PartSegCore/: __init__.py  _old_json_hooks.py  algorithm_describe_base.py  autofit.py  calculate_pipeline.py  channel_class.py  class_generate_base.py  class_generator.py  class_register.py  cmap_utils.py  colors.py  convex_fill.py  custom_colormaps.py  custom_name_generate.py  global_settings.py  image_operations.py  io_utils.py  json_hooks.py  mask_create.py  mask_partition_utils.py  napari_plugin.py  project_info.py  register.py  roi_info.py  segmentation_info.py  state_store.py  universal_const.py  utils.py
package/PartSegImage/: __init__.py  channel_class.py  czifile_fixes.py  image.py  image_reader.py  image_writer.py  tifffile_fixes.py
package/scripts/: PartSeg
package/tests/: conftest.py  help_fun.py  test_analysis_batch.py  test_base.py  test_channel_control.py  test_class_generator.py  test_coloring.py  test_image.py  test_image_adjustment.py  test_io.py  test_mask_create.py  test_mask_partition.py  test_measurements.py  test_mso.py  test_pipeline.py  test_segmentation.py  test_segmentation_proceses.py  test_smooth.py  test_statistics.py  test_window_import.py
plots/: Gauss.ipynb  figure.tex  figure_ex.tex  figure_img.tex
presentation/introduction/: flowchart.tex  introduction.tex
requirements/: constrains_py310.txt  constraints_py3.10.txt  constraints_py3.10_pydantic_1.txt  constraints_py3.11.txt  constraints_py3.11_docs.txt  constraints_py3.11_pydantic_1.txt  constraints_py3.12.txt  constraints_py3.12_docs.txt  constraints_py3.12_pydantic_1.txt  constraints_py3.13.txt  constraints_py3.13_pydantic_1.txt  constraints_py3.8.txt  constraints_py3.8_pydantic_1.txt  constraints_py3.9.txt  constraints_py3.9_pydantic_1.txt  minimal-req.txt  pre_test_problematic_version.txt  requirements_dev.txt  requirements_pyinstaller.in  requirements_pyinstaller.txt  requirements_test.txt  version_denylist.txt
src/: __main__.py  batch_testing.py  batch_window.py  callback.py  convert_to_cmap.py  genrate_colormaps_map.py  gui.py  image_view.py  io_functions.py  launcher.py  launcher.spec  launcher_main.py  main.py  parallel_backed.py  partseg2_main.py  partseg_main.py  prepare_plan_widget.py  qt_import.py  segment.py  setup.py  stack_gui_main.py  stack_image_view.py  stack_settings.py  stackseg_main.py  statistics_calculation.py  test-sctipt.py  testy.py  universal_gui_part.py  update_metadata.py
src/common_gui/: algorithms_description.py  channel_control.py  collapse_checkbox.py  color_image.py  colors_choose.py  custom_save.py  dim_combobox.py  flow_layout.py  lock_checkbox.py  mask_widget.py  save_dialog.py  select_multiple_files.py  stack_image_view.py  universal_gui_part.py  (+2 more)
stack_algorithm/: algorithm_description.py  segment.py  threshold_algorithm.py
(+660 files in other folders)
