[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=42.0.0", "wheel>=0.34.2", "setuptools_scm[toml]>=3.4"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "package/PartSeg/version.py"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
  | package/PartSeg/version.py
)
'''

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "UP", "C", "A" ,"YTT", "W", "B", "A", "C4", "ISC", "ICN", "Q", "SIM", "PLC", "PLE", "PLR", "PLW", "RUF0"]
ignore = ["A003", "SIM108"]
exclude = ["examples/call_simple_threshold.py"]
target-version = "py38"
fix = true

[tool.ruff.isort]
known-first-party=['PartSeg', 'PartSegData','PartSegCore','PartSegImage', 'PartSegCore_compiled_backend']


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15

[tool.ruff.per-file-ignores]
"docs/conf.py" = ["A001"]


[tool.check-manifest]
ignore = [".travis.yml", "package/PartSeg/changelog.py", "package/PartSeg/version.py"]


[[tool.mypy.overrides]]
module = "tifffile.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "defusedxml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "czifile.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "oiffile"
ignore_missing_imports = true

[tool.check-wheel-contents]
toplevel = ["PartSeg", "PartSegCore", "PartSegImage"]
