[metadata]
name = PartSeg
description = PartSeg is python GUI for bio imaging analysis especially nucleus analysis,
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://4dnucleome.cent.uw.edu.pl/PartSeg/
author = Grzegorz Bokota
author_email = g.bokota@cent.uw.edu.pl
license = BSD-3-Clause
license_file = License.txt
platforms = Linux, Windows, MacOs
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords = bioimaging, GUI
project_urls =
    Documentation = https://partseg.readthedocs.io/en/stable/
    Source Code = https://github.com/4DNucleome/PartSeg

[options]
packages = find:
install_requires =
    Cython>=0.29.13
    PartSegData==0.9.4
    PyOpenGL-accelerate>=3.1.5
    QtPy>=1.3.1
    SimpleITK>=1.1.0
    appdirs>=1.4.3
    czifile>=2019.4.20
    dataclass>=0.7
    defusedxml>=0.6.0
    h5py>=2.7.1
    imagecodecs
    napari>=0.3.3
    numpy>=1.16.0
    oiffile>=2019.1.1
    openpyxl>=2.4.9
    packaging>=17.1
    pandas>=0.22.0
    requests>=2.18.0
    scipy>=0.19.1
    sentry_sdk>=0.14.3
    six>=1.11.0
    sympy>=1.1.1
    tifffile>=2019.7.26
    xlrd>=1.1.0
    xlsxwriter
python_requires = >=3.6
package_dir =
    =package
setup_requires =
    cython>=0.29.13
    numpy>=1.16.0
    setuptools_scm[toml]>=3.4
tests_require =
    pytest
    pytest-cov
    pytest-qt

[options.entry_points]
console_scripts =
    PartSeg = PartSeg.launcher_main:main
    Tester = PartSeg.test_widget_main:main

[options.extras_require]
pyqt =
    PyQt5>=5.10.1
pyqt5 =
    PyQt5>=5.10.1
pysid2 =
    PySide2>=5.10.1
pyside =
    PySide2>=5.10.1
test =
    pytest >= 3.0.0
    pytest-cov
    pytest-qt

[options.packages.find]
where = package

[tool:pytest]
addopts = --cov=PartSeg --cov=PartSegCore --cov=PartSegImage
testpaths = package/tests

[coverage:run]
source = package/PartSeg, package/PartSegCore, package/PartSegImage
omit = .tox/*

[flake8]
max-line-length = 120
ignore = E203,W503,C901
max-complexity = 18
exclude = package/PartSeg/changelog.py, build/**, .eggs/**
