[metadata]
name = PartSeg
description = PartSeg is python GUI for bio imaging analysis especially nucleus analysis,
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://4dnucleome.cent.uw.edu.pl/PartSeg/
author = Grzegorz Bokota
author_email = g.bokota@cent.uw.edu.pl
license = BSD-3-Clause
license_file = License.txt
platforms = Linux, Windows, MacOs
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords = bioimaging, GUI
project_urls =
    Documentation = https://partseg.readthedocs.io/en/stable/
    Source Code = https://github.com/4DNucleome/PartSeg

[options]
packages = find:
install_requires =
    PartSegCore_compiled_backend>=0.12.0a0
    PartSegData==0.10.0
    PyOpenGL-accelerate>=3.1.5
    QtPy>=1.7.0
    SimpleITK>=1.1.0
    appdirs>=1.4.4
    czifile>=2019.5.22
    defusedxml>=0.6.0
    h5py>=2.8.0
    imagecodecs>=2020.5.30
    imageio>=2.5.0
    mahotas>=1.4.9
    napari>=0.4.3
    numpy>=1.16.5
    oiffile>=2019.1.1
    openpyxl>=2.4.9
    packaging>=17.1
    pandas>=0.24.0
    requests>=2.18.0
    scipy>=1.2.0
    sentry_sdk>=0.14.3
    six>=1.11.0
    sympy>=1.1.1
    tifffile>=2020.2.16
    xlrd>=1.1.0
    xlsxwriter
    typing-extensions>=3.7.4.2 ;python_version < '3.8'
python_requires = >=3.7
package_dir =
    =package
setup_requires =
    setuptools_scm[toml]>=3.4
tests_require =
    pytest
    pytest-cov
    pytest-qt

[options.packages.find]
where = package

[options.entry_points]
console_scripts =
    PartSeg = PartSeg.launcher_main:main
    Tester = PartSeg.test_widget_main:main
napari.plugin =
    PartSeg Image = PartSegCore.napari_plugins.load_image
    PartSeg Masked Tiff = PartSegCore.napari_plugins.load_masked_image
    PartSeg Analysis project = PartSegCore.napari_plugins.load_roi_project
    PartSeg Mask project = PartSegCore.napari_plugins.load_mask_project
    PartSeg Mask project save = PartSegCore.napari_plugins.save_mask_roi

[options.extras_require]
pyqt =
    PyQt5!=5.15.0,>=5.12.3
pyqt5 =
    PyQt5!=5.15.0,>=5.12.3
pyside =
    PySide2!=5.15.0,>=5.12.3
pyside2 =
    PySide2!=5.15.0,>=5.12.3
test =
    pytest>=3.0.0
    pytest-cov
    pytest-qt

[tool:pytest]
addopts = --cov=PartSeg --cov=PartSegCore --cov PartSegImage
testpaths = package/tests
junit_family = legacy
timeout = 900
filterwarnings =
    ignore:invalid value encountered
    ignore:The 'junit_family' encountered
    ignore:numpy.ufunc size changed, may indicate
    ignore:tostring.*is deprecated
    ignore:emitter camera is deprecated,

[coverage:paths]
source =
    package
    */site-packages

[coverage:run]
source =
    PartSeg
    PartSegCore
    PartSegImage
omit = .tox/*
parallel = True

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError

[flake8]
max-line-length = 120
ignore = E203,W503,C901
max-complexity = 18
exclude = package/PartSeg/changelog.py, build/**, .eggs/**
banned-modules = PyQt5 = use qtpy
    PySide2 = use qtpy
