[metadata]
name = PartSeg
description = PartSeg is python GUI and set of napari plugins for bio imaging analysis especially nucleus analysis,
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://4dnucleome.cent.uw.edu.pl/PartSeg/
author = Grzegorz Bokota
author_email = g.bokota@cent.uw.edu.pl
license = BSD-3-Clause
license_files = License.txt
platforms = Linux, Windows, MacOs
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
keywords = bioimaging, GUI
project_urls =
    Documentation = https://partseg.readthedocs.io/en/stable/
    Source Code = https://github.com/4DNucleome/PartSeg
    User Support = https://github.com/4DNucleome/PartSeg/issues
    Bug Tracker = https://github.com/4DNucleome/PartSeg/issues

[options]
packages = find:
install_requires =
    IPython>=7.7.0
    PartSegCore-compiled-backend>=0.13.11,<0.16.0
    PartSegData==0.10.0
    QtAwesome!=1.2.0,>=1.0.3
    QtPy>=1.10.0
    SimpleITK>=2.0.0
    appdirs>=1.4.4
    czifile>=2019.5.22
    defusedxml>=0.6.0
    fonticon-fontawesome6>=6.1.1
    h5py>=3.3.0
    imagecodecs>=2020.5.30
    imageio>=2.5.0
    ipykernel>=5.2.0
    local-migrator>=0.1.7
    magicgui!=0.5.0,>=0.4.0
    mahotas>=1.4.10
    napari>=0.4.14
    nme>=0.1.7
    numpy>=1.18.5
    oiffile>=2020.1.18
    openpyxl>=2.5.7
    packaging>=20.0
    pandas>=1.1.0
    psygnal>=0.3.1
    pydantic>=1.8.1
    pygments>=2.4.0
    qtconsole>=4.7.7
    requests>=2.18.0
    scipy>=1.4.1
    sentry-sdk>=0.14.3
    six>=1.11.0
    superqt>=0.3.0
    sympy>=1.1.1
    tifffile>=2020.9.30
    traceback-with-variables>=2.0.4
    vispy>=0.9.4
    xlrd>=1.1.0
    xlsxwriter>=2.0.0
python_requires = >=3.8
include_package_data = True
package_dir =
    =package
tests_require =
    pytest
    pytest-cov
    pytest-qt
    lxml

[options.packages.find]
where = package

[options.entry_points]
console_scripts =
    PartSeg = PartSeg.launcher_main:main
napari.manifest =
    PartSeg = PartSeg:napari.yaml

[options.extras_require]
accelerate =
    PyOpenGL-accelerate>=3.1.5
all =
    PyOpenGL-accelerate>=3.1.5
    PyQt5!=5.15.0,>=5.12.3
docs =
    autodoc-pydantic==1.7.2
    sphinx!=3.0.0,!=3.5.0
    sphinx-autodoc-typehints==1.18.3
    sphinx-qt-documentation==0.4
pyinstaller =
    %(all)s
    PyInstaller
    pydantic<2
pyqt =
    PyQt5!=5.15.0,>=5.12.3
pyqt5 =
    PyQt5!=5.15.0,>=5.12.3
pyqt6 =
    PyQt6
pyside =
    PySide2!=5.15.0,>=5.12.3
pyside2 =
    PySide2!=5.15.0,>=5.12.3
pyside6 =
    PySide6
test =
    lxml
    pytest>=7.0.0
    pytest-cov
    pytest-qt
    pytest-timeout
    scikit-image

[options.package_data]
partsegcore = napari.yaml

[tool:pytest]
addopts = --maxfail=5 --durations=5
testpaths = package/tests
junit_family = legacy
timeout = 900
filterwarnings =
    ignore:invalid value encountered
    ignore:The 'junit_family' encountered
    ignore:numpy.ufunc size changed, may indicate
    ignore:tostring.*is deprecated
    ignore:emitter camera is deprecated,
    ignore:`np.float` is a deprecated alias
    ignore:divide by zero encountered in true_divide
    ignore:the imp module is deprecated in favour of importlib
    ignore:distutils Version classes are deprecated.
    ignore:Please import PackageMetadata from 'npe2' or from 'npe2.manifest'
    ignore:Please use `zoom` from the `scipy.ndimage` namespace
    ignore:Converting `np.character` to a dtype
    ignore:Public access to Window.qt_viewer
markers =
    enablethread: Allow to use thread in test
    enabledialog: Allow to use dialog in test
    no_patch_add_layer: Do not patch napari viewer
    windows_ci_skip: Skip test when running on windows CI
    pyside_skip: Skip test when using pyside qt backend

[coverage:paths]
source =
    package
    */site-packages

[coverage:run]
source =
    PartSeg
    PartSegCore
    PartSegImage
omit = .tox/*
parallel = True

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if typing.TYPE_CHECKING
    raise RuntimeError()
    \.\.\.

[flake8]
max-line-length = 120
ignore = E203,W503,C901
max-complexity = 18
exclude = package/PartSeg/changelog.py, build/**, .eggs/**
banned-modules = PyQt5 = use qtpy
    PySide2 = use qtpy

[pylint.FORMAT]
max-line-length = 120
